# etrade_quant_trading

./: .env.example  .gitignore  _reference.py  monthly_cpu_bound.py  only_write_when_changed.patch  patch_only_write_when_changed.py  polygonio_config.py  polygonio_minimal_fix.patch  pyproject.toml  quick_change.patch  requirements.txt
.github/workflows/: ci.yml
etrade_quant_trading.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
polygon_api_option_data/: SPY_stored_option_chain.pkl  SPY_stored_option_price.pkl
polygonio/: backtest_core.py  cache_io.py  cache_io.py.bak_pathwrap  chains.py  config.py  daily_report.py  earnings.py  fix_patch.patch  logging_setup.py  market_calendar.py  market_calendar.py.bak_dbg  option_lookup.py  option_math.py  paths.py  plot_results.py  poly_client.py  prices.py  pricing.py  recursive_backtest.py  recursive_backtest.py.bak  recursive_backtest.py.bak2  recursive_backtest.py.bak_dbg  recursive_backtest.py.bak_debug  recursive_backtest.py.bak_targetonly2  symbols.py
scripts/: dailytrade.py  run_backtest.py  run_backtest.py.bak  run_daily.py  run_daily.py.bak_dbg
strategies/: strategies.py
tests/: conftest.py  test_integration_run_daily.py  test_plot_results.py
yfinance/prices/: SPY_prices.csv
