[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etrade-quant-trading"
version = "0.0.0"
description = "Backtesting and daily trading utilities"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["polygonio*", "strategies*", "yfinance*", "accounts*"]
